force-app/main/default/objects/Territory_Owner_Assignment__c/Territory_Owner_Assignment__c.object-meta.xml
<CustomObject>
    <description>Stores the territoryId that needs  Account, Contact, Opportunity owner reassignment</description>
    <label>Territory Owner Assignment</label>
    <nameField>
        <label>Territory Owner Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Owner Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>