force-app/main/default/objects/Territory_Owner_Assignment__c/fields/AdaptiveId__c.field-meta.xml
<CustomField>
    <fullName>AdaptiveId__c</fullName>
    <description>Holds the territoryId where sales engineer  has been newly added or deleted. Used for opportunity.sales engineer update</description>
    <label>AdaptiveId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>