force-app/main/default/objects/Territory_Owner_Assignment__c/fields/Functionality__c.field-meta.xml
<CustomField>
    <fullName>Functionality__c</fullName>
    <description>Determines the ETM recalculation of TART or owner update based on functionality effected</description>
    <label>Functionality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner Assignment</fullName>
                <default>true</default>
                <label>Owner Assignment</label>
            </value>
            <value>
                <fullName>Split Opportunity</fullName>
            </value>
            <value>
                <fullName>Sales Engineer Assignment</fullName>
            </value>
            <value>
                <fullName>Alliance Rep Assignment</fullName>
            </value>
            <value>
                <fullName>SDR Assignment</fullName>
            </value>
            <value>
                <fullName>Opp Co-Owner Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>