force-app/main/default/objects/Territory_Owner_Assignment__c/fields/LeafTerritoryId__c.field-meta.xml
<CustomField>
    <fullName>LeafTerritoryId__c</fullName>
    <label>LeafTerritoryId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>